make sure footer doesn't overlap content

--- a/css/sticky-footer.less
+++ b/css/sticky-footer.less
@@ -6,6 +6,10 @@ html {
 body {
   margin-bottom: @footer-height;
 }
+#pusher {
+  visibility: hidden;
+  margin-top: @footer-height;
+}
 #footer {
   bottom: 0;
   height: @footer-height;
